[tool.pytest.ini_options]
filterwarnings = [ "error::FutureWarning" ]

[build-system]
requires = ["setuptools", "wheel"]

[tool.ruff]
target-version = "py37"
extend-exclude = ["attic", "venv"]

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
  "NPY201", # numpy 2.0 migration
]
preview = true
