[pep8]
ignore=E221,E501,E701

[flake8]
ignore = E221,E501,E701
max-line-length = 120
exclude = tests,venv,attic
max-complexity = 10

[metadata]
name = melizalab-tools
version = attr: dlab.core.__version__
description = Meliza lab scripts and modules for auditory neurophysiology
long_description = file: README.md
keywords = neuroscience, auditory
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
author = Dan Meliza
author_email = dan@meliza.org
maintainer = Dan Meliza
maintainer_email = dan@meliza.org
url = https://github.com/melizalab/melizalab-tools

[options]
zip_safe = false
packages = dlab
python_requires = >= 3.8
setup_requires =
    setuptools >=58.1.0
install_requires =
    aiopath >= 0.5.12
    aiohttp >= 3.8.4
    appdirs >= 1.4.4
    arf >= 2.6.4
    arfx >= 2.6.12
    neurobank >= 0.10.2
    numpy >= 1.23.1
    pandas >= 1.4
    PyYAML >= 5.4.1
    quickspikes >= 1.3.9
    quicksong >= 0.2.0
    scikit-learn >= 1.1.2
    toelis >= 2.1.1

[options.entry_points]
console_scripts =
    group-kilo-spikes = dlab.kilo:run_group_spikes
    song-detect = dlab.song_detect:script
