[pep8]
ignore=E221,E501,E701

[flake8]
ignore = E221,E501,E701
max-line-length = 120
exclude = tests,venv,attic
max-complexity = 10

[metadata]
name = melizalab-tools
version = attr: dlab.core.__version__
description = Meliza lab scripts and modules for auditory neurophysiology
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = neuroscience, auditory
license = BSD 3-Clause License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
author = Dan Meliza
author_email = dan@meliza.org
maintainer = Dan Meliza
maintainer_email = dan@meliza.org
url = https://github.com/melizalab/melizalab-tools

[options]
zip_safe = false
packages = dlab
python_requires = >= 3.8
setup_requires =
    setuptools >=58.1.0
install_requires =
    appdirs >= 1.4.4
    arf >= 2.6.4
    neurobank == 0.10.8
    numpy >= 1.19.5, <2
    scipy >= 1.8
    pandas >= 1.4.0
    quickspikes >= 1.3.9
    toelis >= 2.1.1
    libtfr >= 2.1.7
    ewave >= 1.0.7
    PyYAML >= 6.0.1
    samplerate == 0.1.0

[options.extras_require]
test =
    pytest >= 7.0

[options.entry_points]
console_scripts =
    group-kilo-spikes = dlab.kilo:group_spikes_script
    get-songs = dlab.get_songs:script
    		   
